@@ -22,20 +22,6 @@ using namespace std;
 
 #define DEFAULT_MODE (S_IRUSR|S_IWUSR|S_IXUSR|S_IXGRP|S_IXOTH)
 #define DROPPING_MODE (S_IRWXU|S_IRWXG|S_IRWXO) 
-#define HOSTDIRPREFIX  "hostdir."
-#define DROPPINGPREFIX "dropping."
-#define DATAPREFIX     DROPPINGPREFIX"data."
-#define INDEXPREFIX    DROPPINGPREFIX"index."
-#define METADIR        "meta"         // where to stash shortcut metadata
-#define VERSIONPREFIX  "version"      // where to stash the version info 
-// OPENHOSTDIR is now the same as METADIR
-//#define OPENHOSTDIR    "openhosts"    // where to stash whether file open
-    // where to stash the chmods and chowns, and identify containers
-#define OPENPREFIX     "open."
-#define ACCESSFILE     ".plfsaccess113918400"  
-//#define CREATORFILE    "creator" // no separate creator anymore:use accessfile
-#define GLOBALINDEX    "global.index"
-#define GLOBALCHUNK    "global.chunk"
 
 enum
 DirectoryOperation {
