@@ -32,9 +32,6 @@ hashMethod {
     NO_HASH,
 };
 
-#define MAX_HOSTDIRS 1024   // ad_plfs_open relies on this.  if change here,
-                            // must change there as well
-
 #define PLFS_ENTER PLFS_ENTER2(PLFS_PATH_REQUIRED)
 
 #define PLFS_ENTER2(X) bool is_mnt_pt = false; int ret = 0;\
@@ -1303,6 +1300,7 @@ int plfs_hostdir_rddir(void **index_stream,char *targets,int rank,
     while(count<directories.size()){  // why isn't this a for loop?
         path=directories[count];
         index_droppings=Container::hostdir_index_read(path.c_str());
+        if (index_droppings.size() == 0) return -ENOENT;
         index_droppings.erase(index_droppings.begin());
         Index tmp(top_level);
         tmp=Container::parAggregateIndices(index_droppings,0,1,path);
